--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=parking
+
+# PostgreSQL configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
